Login to google via API improved

--- a/20250428_Gmail_Access_example_v2.ipynb
+++ b/20250428_Gmail_Access_example_v2.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "# Example of how to connect from Python to a Gmail Account\n",
     "\n",
-    "Connect to a test gmail account in order to read email data."
+    "Connect to a test gmail account in order to read email data.\n",
+    "\n",
+    "Different guide found [here](https://www.directedignorance.com/blog/gmail-with-python) (with Perplexity [example](https://www.perplexity.ai/search/on-databricks-how-can-i-create-ZLspdEp0Slm5Xoh4yZsOTA#0))"
    ]
   },
   {
@@ -65,7 +67,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "cb0111b4-1979-4331-8d44-8bd9f9071ba3",
+     "nuid": "81262147-376f-4bb0-b3e4-405be40e46c7",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -73,13 +75,15 @@
    },
    "outputs": [],
    "source": [
-    "import json\n",
-    "import base64\n",
+    "from google.oauth2.credentials import Credentials\n",
     "from google_auth_oauthlib.flow import InstalledAppFlow, Flow\n",
-    "from googleapiclient.discovery import build\n",
+    "from google.auth.transport.requests import Request\n",
+    "import json\n",
     "import os\n",
     "import email.utils\n",
-    "from datetime import datetime, timezone, timedelta"
+    "from datetime import datetime, timezone, timedelta\n",
+    "import base64\n",
+    "from googleapiclient.discovery import build"
    ]
   },
   {
@@ -92,7 +96,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d38382fd-ca08-4b45-acbe-bcaac02a5110",
+     "nuid": "e4269879-0016-4375-b8e5-bd8d868d5e42",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -100,8 +104,16 @@
    },
    "outputs": [],
    "source": [
-    "CREDENTIALS_PATH = \"/dbfs/FileStore/ga_credentials.json\"\n",
-    "SCOPES = ['https://www.googleapis.com/auth/gmail.readonly']"
+    "catalog_ = 'users'\n",
+    "schema_ = 'gabriele_albini'\n",
+    "volume_ = 'ec_volume'\n",
+    "spark.sql('USE CATALOG ' + catalog_)\n",
+    "spark.sql('USE SCHEMA ' + schema_)\n",
+    "spark.sql('CREATE VOLUME IF NOT EXISTS ' + volume_)\n",
+    "\n",
+    "CREDENTIALS_PATH = \"/Volumes/\"+catalog_+'/'+schema_+'/'+volume_+\"/credentials_ga_webapp.json\"\n",
+    "SCOPES = ['https://www.googleapis.com/auth/gmail.readonly']\n",
+    "TMP_TOKEN_FILE = \"/Volumes/\"+catalog_+'/'+schema_+'/'+volume_+\"/ga_tmp_token.json\""
    ]
   },
   {
@@ -114,7 +126,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "0c585457-c1fd-466a-9c1d-0ea9876faea6",
+     "nuid": "96d04304-e114-4f2e-9638-a59157d04de5",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -123,76 +135,47 @@
    "outputs": [],
    "source": [
     "# Read from credentials file and return as JSON\n",
-    "def load_credentials():\n",
-    "    with open(CREDENTIALS_PATH, 'r') as f:\n",
-    "        return json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ff78454e-d613-42d6-b1a6-c1cfff31b1de",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Authenticate to Google (not working for Databricks clusters as the webapp gets opened on the cluster's localhost which is not reachable)\n",
-    "def gmail_authenticate():\n",
-    "    #credentials_ = load_credentials()\n",
+    "def load_credentials(path_ = CREDENTIALS_PATH):\n",
+    "    with open(path_, 'r') as f:\n",
+    "        return json.load(f)\n",
     "\n",
-    "    # Manual OAuth flow with out-of-band redirect URI (no browser)\n",
-    "    flow = InstalledAppFlow.from_client_secrets_file(CREDENTIALS_PATH, scopes=SCOPES)\n",
-    "    #creds = flow.run_console()\n",
-    "    creds = flow.run_local_server(open_browser=False)  # This prints URL and asks for code input in terminal\n",
-    "    \n",
-    "    return creds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "0526a10d-38b6-429e-a1b0-43d7b5a69e52",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
     "# Authenticate to Google Manually\n",
-    "def gmail_authenticate_manual():\n",
-    "  credentials_ = load_credentials()\n",
+    "def gmail_authenticate_manual(CREDENTIALS_PATH, TMP_TOKEN_FILE):\n",
+    "  existing_creds_ = False\n",
     "\n",
-    "  #Manual OAuth flow\n",
-    "  flow = Flow.from_client_config(credentials_, scopes=SCOPES)\n",
-    "  flow.redirect_uri = 'http://localhost:8080/'  # Must match your OAuth client redirect URI\n",
-    "  auth_url, _ = flow.authorization_url(prompt='consent')\n",
+    "  # Try to retrieve credentials from token file\n",
+    "  try:\n",
+    "    creds = Credentials.from_authorized_user_file(TMP_TOKEN_FILE, SCOPES)\n",
+    "    if creds and not creds.expired:\n",
+    "      existing_creds_ = True\n",
+    "      print(\":: Reading credentials from token file\")\n",
+    "  except:\n",
+    "    pass\n",
     "\n",
-    "  print(\"Go to this URL in your browser; after signing in, the URL will fail, however extract the &code= from the generated URL:\\n\")\n",
-    "  print(auth_url)\n",
+    "  if not existing_creds_:\n",
+    "    #Load credentials from Google Json file\n",
+    "    print(\":: Re-generating credentials\")\n",
+    "    credentials_ = load_credentials()\n",
     "\n",
-    "  code = input(\"URL code: \")\n",
-    "  flow.fetch_token(code=code)\n",
+    "    #Manual OAuth flow\n",
+    "    flow = Flow.from_client_config(credentials_, scopes=SCOPES)\n",
+    "    flow.redirect_uri = 'http://localhost:8080/'  # Must match your OAuth client redirect URI\n",
+    "    auth_url, _ = flow.authorization_url(prompt='consent')\n",
     "\n",
-    "  #Generate credentials\n",
-    "  creds = flow.credentials\n",
+    "    print(\"Go to this URL in your browser; after signing in, the URL will fail, however extract the &code= from the generated URL:\\n\")\n",
+    "    print(auth_url)\n",
+    "\n",
+    "    code = input(\"---> URL code: \")\n",
+    "    flow.fetch_token(code=code)\n",
+    "\n",
+    "    #Generate credentials\n",
+    "    creds = flow.credentials\n",
+    "\n",
+    "    # Save credentials to token file\n",
+    "    os.makedirs(os.path.dirname(TMP_TOKEN_FILE), exist_ok=True)\n",
+    "    with open(TMP_TOKEN_FILE, 'w') as token:\n",
+    "      token.write(creds.to_json())\n",
+    "  \n",
     "  return creds"
    ]
   },
@@ -206,7 +189,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "042a018e-200d-48dc-ad85-7715fff4b843",
+     "nuid": "ee57daa8-d9b7-4628-b021-669264a496b6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -214,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "access_ = gmail_authenticate_manual()"
+    "access_ = gmail_authenticate_manual(CREDENTIALS_PATH, TMP_TOKEN_FILE)"
    ]
   },
   {
@@ -238,7 +221,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f30ec0bc-088d-4834-91dc-dd9b75eabf93",
      "showTitle": false,
@@ -379,7 +365,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "20250428_Gmail_Access_example",
+   "notebookName": "20250428_Gmail_Access_example_v2",
    "widgets": {}
   },
   "language_info": {
