--- a/20250428_Gmail_Access_example_v2.ipynb
+++ b/20250428_Gmail_Access_example_v2.ipynb
@@ -201,6 +201,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "48344133-ae97-468f-a385-d50720e76c02",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "## Confirm validity\n",
+    "print(access_.valid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
