classification query updated

--- a/20250502_Email_Classification.ipynb
+++ b/20250502_Email_Classification.ipynb
@@ -104,7 +104,7 @@
     "  path_ ,\n",
     "  header=True,\n",
     "  sep=';')\n",
-    "display(email_df)"
+    "display(email_df.head(2))"
    ]
   },
   {
@@ -220,13 +220,19 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select *,\n",
-    "  ai_query(\n",
-    "    'databricks-meta-llama-3-3-70b-instruct',\n",
-    "    \"${prompt}\" || Email_body,\n",
-    "    modelParameters => named_struct('max_tokens', 1, 'temperature', 0.1)\n",
-    "  ) as Predicted_Label\n",
-    "from email_df_view;"
+    "with cte_0 as (\n",
+    "  select *,\n",
+    "    ai_query(\n",
+    "      'databricks-meta-llama-3-3-70b-instruct',\n",
+    "      \"${prompt}\" || Email_body,\n",
+    "      modelParameters => named_struct('max_tokens', 1, 'temperature', 0.1)\n",
+    "    ) as Predicted_Label_llama33\n",
+    "  from email_df_view\n",
+    ")\n",
+    "  select *\n",
+    "    , case when True_Label = Predicted_Label_llama33 then 1 else 0 end as isCorrect\n",
+    "  from cte_0\n",
+    "  order by RowNr;"
    ]
   }
  ],
