Masking function added

--- a/20250428_Gmail_Access_example_v2.ipynb
+++ b/20250428_Gmail_Access_example_v2.ipynb
@@ -15,9 +15,7 @@
    "source": [
     "# Example of how to connect from Python to a Gmail Account\n",
     "\n",
-    "Connect to a test gmail account in order to read email data.\n",
-    "\n",
-    "Different guide found [here](https://www.directedignorance.com/blog/gmail-with-python) (with Perplexity [example](https://www.perplexity.ai/search/on-databricks-how-can-i-create-ZLspdEp0Slm5Xoh4yZsOTA#0))"
+    "Connect to a test gmail account in order to read email data."
    ]
   },
   {
@@ -33,7 +31,7 @@
     }
    },
    "source": [
-    "## Gmail authentication (won't work on serverless)"
+    "## Gmail authentication"
    ]
   },
   {
