--- a/20250502_Email_Classification.ipynb
+++ b/20250502_Email_Classification.ipynb
@@ -86,6 +86,40 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "74c5241d-e959-4178-a386-f264230f9da7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--Create an empty table applying a column masking function\n",
+    "CREATE OR REPLACE FUNCTION mask_sensitive_data (column_value STRING)\n",
+    "RETURN CASE\n",
+    "  WHEN NOT is_account_group_member('ultra_admin_group') THEN '*****@*****'\n",
+    "  ELSE column_value\n",
+    "END;\n",
+    "\n",
+    "CREATE OR REPLACE TABLE customer_emails (\n",
+    "  CustomerID STRING,\n",
+    "  Sender STRING MASK mask_sensitive_data,\n",
+    "  Email_body STRING\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -104,28 +138,10 @@
     "  path_ ,\n",
     "  header=True,\n",
     "  sep=';')\n",
-    "display(email_df.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5e93d8ab-6ea2-423d-bd9f-34f58342242d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "email_df.createOrReplaceTempView(\"email_df_view\")"
+    "\n",
+    "email_df.select(*email_df.columns[1:-1]).write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"customer_emails\")\n",
+    "\n",
+    "display(spark.sql(\"select * from customer_emails\"))"
    ]
   },
   {
@@ -176,27 +192,8 @@
     "\n",
     "  Now you can identify whether the mail is \"Remove\" or \"Keep\":\n",
     "  Mail: \n",
-    "  \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "47b8d6cb-f488-46ad-8ddb-2a8ce506032b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "  \"\"\"\n",
+    "\n",
     "dbutils.widgets.text(\"prompt\", defaultValue=prompt_, label=\"Prompt\")"
    ]
   },
@@ -220,19 +217,13 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "with cte_0 as (\n",
-    "  select *,\n",
-    "    ai_query(\n",
-    "      'databricks-meta-llama-3-3-70b-instruct',\n",
-    "      \"${prompt}\" || Email_body,\n",
-    "      modelParameters => named_struct('max_tokens', 1, 'temperature', 0.1)\n",
-    "    ) as Predicted_Label_llama33\n",
-    "  from email_df_view\n",
-    ")\n",
-    "  select *\n",
-    "    , case when True_Label = Predicted_Label_llama33 then 1 else 0 end as isCorrect\n",
-    "  from cte_0\n",
-    "  order by RowNr;"
+    "select *,\n",
+    "  ai_query(\n",
+    "    'databricks-meta-llama-3-3-70b-instruct',\n",
+    "    \"${prompt}\" || Email_body,\n",
+    "    modelParameters => named_struct('max_tokens', 1, 'temperature', 0.1)\n",
+    "  ) as Predicted_Label\n",
+    "from customer_emails;"
    ]
   }
  ],
