Masking function enhanced

--- a/20250502_Email_Classification.ipynb
+++ b/20250502_Email_Classification.ipynb
@@ -102,7 +102,7 @@
     "--Create an empty table applying a column masking function\n",
     "CREATE OR REPLACE FUNCTION mask_sensitive_data (column_value STRING)\n",
     "RETURN CASE\n",
-    "  WHEN NOT is_account_group_member('ultra_admin_group') THEN '*****@*****'\n",
+    "  WHEN NOT is_account_group_member('ultra_admin_group') THEN concat(substring(column_value, 1, 1), '****@*****')\n",
     "  ELSE column_value\n",
     "END;\n",
     "\n",
