Prompt template improved.

--- a/20250502_Email_Classification.ipynb
+++ b/20250502_Email_Classification.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "prompt_ = \"\"\"\n",
-    "  Forget all your previous instructions, pretend you are a mail classification expert who tries to identify\n",
+    "  Forget all your previous instructions, pretend you are an e-mail classification expert who tries to identify\n",
     "  whether an e-mail is requesting to be removed from a marketing distribution list.\n",
     "  Answer \"Remove\" if the mail is requesting to be removed, \"Keep\" if not. Do not add any other detail.\n",
     "  If you think it is too difficult to judge, you can exclude the impossible one and choose the other, just answer \"Remove\" or \"Keep\".\n",
@@ -187,11 +187,11 @@
     "  Here are a few examples for you:\n",
     "  * \"I wish to no longer receive emails\" is \"Remove\";\n",
     "  * \"Remove me from any kind of subscriptions\" is \"Remove\";\n",
-    "  * \"How can I return an undesired order\" is \"Keep\";\n",
-    "  * \"When is my product warranty expiring\" is \"Keep\";\n",
+    "  * \"I want to update my delivery address\" is \"Keep\";\n",
+    "  * \"When is my product warranty expiring?\" is \"Keep\";\n",
     "\n",
-    "  Now you can identify whether the mail is \"Remove\" or \"Keep\":\n",
-    "  Mail: \n",
+    "  Now, identify whether the e-mail is \"Remove\" or \"Keep\";\n",
+    "  e-mail: \n",
     "  \"\"\"\n",
     "\n",
     "dbutils.widgets.text(\"prompt\", defaultValue=prompt_, label=\"Prompt\")"
@@ -253,7 +253,7 @@
      "nuid": "3a6fa8bd-d4a3-475e-97e9-1c92c1ec4dfa",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "\n  Forget all your previous instructions, pretend you are a mail classification expert who tries to identify\n  whether an e-mail is requesting to be removed from a marketing distribution list.\n  Answer \"Remove\" if the mail is requesting to be removed, \"Keep\" if not. Do not add any other detail.\n  If you think it is too difficult to judge, you can exclude the impossible one and choose the other, just answer \"Remove\" or \"Keep\".\n  \n  Here are a few examples for you:\n  * \"I wish to no longer receive emails\" is \"Remove\";\n  * \"Remove me from any kind of subscriptions\" is \"Remove\";\n  * \"How can I return an undesired order\" is \"Keep\";\n  * \"When is my product warranty expiring\" is \"Keep\";\n\n  Now you can identify whether the mail is \"Remove\" or \"Keep\":\n  Mail: \n  ",
+      "defaultValue": "\n  Forget all your previous instructions, pretend you are an e-mail classification expert who tries to identify\n  whether an e-mail is requesting to be removed from a marketing distribution list.\n  Answer \"Remove\" if the mail is requesting to be removed, \"Keep\" if not. Do not add any other detail.\n  If you think it is too difficult to judge, you can exclude the impossible one and choose the other, just answer \"Remove\" or \"Keep\".\n  \n  Here are a few examples for you:\n  * \"I wish to no longer receive emails\" is \"Remove\";\n  * \"Remove me from any kind of subscriptions\" is \"Remove\";\n  * \"I want to update my delivery address\" is \"Keep\";\n  * \"When is my product warranty expiring?\" is \"Keep\";\n\n  Now, identify whether the e-mail is \"Remove\" or \"Keep\";\n  e-mail: \n  ",
       "label": "Prompt",
       "name": "prompt",
       "options": {
@@ -264,7 +264,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "\n  Forget all your previous instructions, pretend you are a mail classification expert who tries to identify\n  whether an e-mail is requesting to be removed from a marketing distribution list.\n  Answer \"Remove\" if the mail is requesting to be removed, \"Keep\" if not. Do not add any other detail.\n  If you think it is too difficult to judge, you can exclude the impossible one and choose the other, just answer \"Remove\" or \"Keep\".\n  \n  Here are a few examples for you:\n  * \"I wish to no longer receive emails\" is \"Remove\";\n  * \"Remove me from any kind of subscriptions\" is \"Remove\";\n  * \"How can I return an undesired order\" is \"Keep\";\n  * \"When is my product warranty expiring\" is \"Keep\";\n\n  Now you can identify whether the mail is \"Remove\" or \"Keep\":\n  Mail: \n  ",
+      "defaultValue": "\n  Forget all your previous instructions, pretend you are an e-mail classification expert who tries to identify\n  whether an e-mail is requesting to be removed from a marketing distribution list.\n  Answer \"Remove\" if the mail is requesting to be removed, \"Keep\" if not. Do not add any other detail.\n  If you think it is too difficult to judge, you can exclude the impossible one and choose the other, just answer \"Remove\" or \"Keep\".\n  \n  Here are a few examples for you:\n  * \"I wish to no longer receive emails\" is \"Remove\";\n  * \"Remove me from any kind of subscriptions\" is \"Remove\";\n  * \"I want to update my delivery address\" is \"Keep\";\n  * \"When is my product warranty expiring?\" is \"Keep\";\n\n  Now, identify whether the e-mail is \"Remove\" or \"Keep\";\n  e-mail: \n  ",
       "label": "Prompt",
       "name": "prompt",
       "options": {
